４回目アップロード（スマホ表示対応）

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ジャンケンゲーム</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <div id="game-container">
+ <div id="game-wrapper">
   <h1 id="message">クリックして開始</h1>
 
   <div id="info">
